--- a/Pchelin.SquareCalculator.Tests/Pchelin.SquareCalculator.Tests.csproj
+++ b/Pchelin.SquareCalculator.Tests/Pchelin.SquareCalculator.Tests.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pchelin.SquareCalculator\Pchelin.SquareCalculator.csproj" />
+  </ItemGroup>
 </Project>
